WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156466
[css-grid] Pass GridSizingData instead of columnTracks to track sizing methods
https://bugs.webkit.org/show_bug.cgi?id=156466
Summary
[css-grid] Pass GridSizingData instead of columnTracks to track sizing methods
Sergio Villar Senin
Reported
2016-04-11 07:24:16 PDT
[css-grid] Pass GridSizingData instead of columnTracks to track sizing methods
Attachments
Patch
(14.13 KB, patch)
2016-04-11 07:27 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2016-04-11 07:27:45 PDT
Created
attachment 276148
[details]
Patch
Sergio Villar Senin
Comment 2
2016-04-12 01:24:39 PDT
Comment on
attachment 276148
[details]
Patch Clearing flags on attachment: 276148 Committed
r199341
: <
http://trac.webkit.org/changeset/199341
>
Sergio Villar Senin
Comment 3
2016-04-12 01:24:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug